# product_inventory

./: .gitignore  Dockerfile  dopcker-compose.yml  main.py  models.py  pyproject.toml
migrations/: env.py
migrations/versions/: d58dd566daa4_initial_master_migration.py
